--- a/src/app/additem/additem.component.html
+++ b/src/app/additem/additem.component.html
@@ -1,4 +1,5 @@
-
-<input #box type="text" name="Addtask" placeholder="Adicionar uma nova tarefa" id="inputAdd" (keyup)="guardaTarefa($event)">
-<button type="submit" name="add" id="buttonAdd"  (click)="adicionarItem($event)"><i class="fa fa-plus-circle"></i></button>
+<input type="text" name="Addtask" placeholder="Adicionar tarefa" id="inputAdd" [(ngModel)]="tarefa.nome">
+<!-- (change)="guardaTarefa($event.target.value)" -->
+<button type="submit" name="add" id="buttonAdd" (click)="adicionarItem()"><i
+    class="fa fa-plus-circle"></i></button>
 <button type="submit" name="refresh" id="refresh"><i class="fa fa-cloud-upload-alt"></i></button>
