Atualizando lista de Tarefas a fazer

--- a/src/app/additem/additem.component.html
+++ b/src/app/additem/additem.component.html
@@ -1,5 +1,3 @@
 <input type="text" name="Addtask" placeholder="Adicionar tarefa" id="inputAdd" [(ngModel)]="tarefa.nome">
-<!-- (change)="guardaTarefa($event.target.value)" -->
-<button type="submit" name="add" id="buttonAdd" (click)="adicionarItem()"><i
-    class="fa fa-plus-circle"></i></button>
+<button type="submit" name="add" id="buttonAdd" (click)="adicionarItem()"><i class="fa fa-plus-circle"></i></button>
 <button type="submit" name="refresh" id="refresh"><i class="fa fa-cloud-upload-alt"></i></button>
