--- a/src/app/additem/additem.component.html
+++ b/src/app/additem/additem.component.html
@@ -1,3 +1,6 @@
-<input type="text" name="Addtask" placeholder="Adicionar tarefa" id="inputAdd" [(ngModel)]="tarefa.nome">
-<button type="submit" name="add" id="buttonAdd" (click)="adicionarItem()"><i class="fa fa-plus-circle"></i></button>
-<button type="submit" name="refresh" id="refresh"><i class="fa fa-cloud-upload-alt"></i></button>
+<form [formGroup]="form">
+  <!-- <p *ngIf="form.controls.tarefa.errors.required">ERRO! Digite uma tarefa!!</p> -->
+  <input type="text" placeholder="Adicionar tarefa" id="tarefa" formControlName="tarefa">
+  <button name="buttonAdd" id="buttonAdd" (click)="adicionarItemClick()"><i class="fa fa-plus-circle"></i></button>
+  <button type="submit" name="refresh" id="refresh"><i class="fa fa-cloud-upload-alt"></i></button>
+</form>
