--- a/src/app/additem/additem.component.html
+++ b/src/app/additem/additem.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
   <input type="text" placeholder="Adicionar tarefa" id="tarefa" formControlName="tarefa">
-  <button name="buttonAdd" id="buttonAdd" (click)="adicionarItemClick()"><i class="fa fa-plus-circle"></i></button>
+  <button name="buttonAdd" id="buttonAdd" (click)="salvarItem()"><i class="fa fa-plus-circle"></i></button>
   <button type="submit" name="refresh" id="refresh"><i class="fa fa-cloud-upload-alt"></i></button>
 </form>
