Alterando nome das pastas e dos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<h1>{{titleIndex}}</h1> 
-<app-additem></app-additem> 
-<app-display></app-display>
-<router-outlet></router-outlet>
+<app-task-add></app-task-add>
+<app-tasks></app-tasks>
