--- a/src/app/components/modal-task-update/modal-task-update.component.html
+++ b/src/app/components/modal-task-update/modal-task-update.component.html
@@ -9,9 +9,9 @@
   <form [formGroup]="forms">
     <fieldset>
       <div class="form-group row m-b-15">
-        <label class="col-md-3 col-form-label" for="tarefa">Tarefa:</label>
+        <label class="col-md-3 col-form-label" for="assignment">Tarefa:</label>
         <div class="col-md-7">
-          <input type="text" class="form-control" id="tarefa" placeholder="Digite a nova tarefa" formControlName="tarefa">
+          <input type="text" class="form-control" id="assignment" placeholder="Digite a nova tarefa" formControlName="assignment">
         </div>
       </div>
     </fieldset>
@@ -19,6 +19,6 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-sm btn-white" (click)="close()">Cancelar</button>
+  <button class="btn btn-sm btn-danger" (click)="close()">Cancelar</button>
   <button class="btn btn-sm btn-primary width-80" ngbAutofocus (click)="update()">Confirmar</button>
 </div>
