--- a/src/app/components/task-add/task-add.component.html
+++ b/src/app/components/task-add/task-add.component.html
@@ -1,5 +1,8 @@
-<form [formGroup]="form">
-  <input type="text" placeholder="Adicionar tarefa" id="tarefa" formControlName="tarefa">
-  <button name="buttonAdd" id="buttonAdd" (click)="salvarItem()"><i class="fa fa-plus-circle"></i></button>
-  <button type="button" name="refresh" id="refresh" (click)="enviarDados()"><i class="fa fa-cloud-upload-alt"></i></button>
-</form>
+<div>
+  <form [formGroup]="form">
+    <input type="text" placeholder="Adicionar tarefa" id="assignment" formControlName="assignment">
+    <button name="saveTask" id="saveTask" (click)="saveItem()"><i class="fa fa-plus-circle"></i></button>
+    <button name="sendBankData" id="sendBankData" (click)="sendData()"><i
+        class="fa fa-cloud-upload-alt"></i></button>
+  </form>
+</div>
