--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-task-add></app-task-add>
-<app-tasks></app-tasks>
+<h1>Lista de Tarefas</h1>
+<div>
+  <app-task-add></app-task-add>
+  <app-tasks></app-tasks>
+</div>
