Alterando Layout ( HTML,CSS)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>Lista de Tarefas</h1>
-<div>
+<header>
+  <h1>Lista de Tarefas</h1>
   <app-task-add></app-task-add>
+</header>
+<main>
   <app-tasks></app-tasks>
-</div>
+</main>
