--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -1,50 +1,53 @@
-content{
-    width: 90%;
-    display: flex;
-    justify-content: center;
+.container {
+  background-color: rgba(139, 17, 113, 0.397);
+  border-radius: 1rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.container{
-    margin: 0 1rem;
-    background-color: white;
-    width: 20%;
-    height: 4.5rem;
-    border-radius: 0.8rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.cards {
+  background-color: white;
+  width: 24%;
+  height: 4.8rem;
+  border-radius: 0.8rem;
+  display: flex;
+  align-items: center;
+  margin: 0.7rem 0.3rem;
+  padding: 1rem;
+  list-style: none;
 }
 
-.task{
-    width: 75%;
-    font-weight: 600;
+.task {
+  width: 75%;
+  font-weight: 600;
+  margin-right: 1.8rem;
 }
 
-.content-buttons{
-    width: 25%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.content-buttons {
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.buttons{
-    width: 1.6rem;
-    border-radius: 0.7rem;
-    outline: none;
-    border: none;
-    font-size: 1.3rem;
-    background: none;
-    margin-right: 0.2rem;
+.buttons {
+  width: 1.6rem;
+  border-radius: 0.7rem;
+  outline: none;
+  border: none;
+  font-size: 1.3rem;
+  background: none;
+  margin-right: 0.2rem;
 }
 
-.buttons:nth-child(1){
-    color: rgba(0, 0, 0, 0.945);
+.buttons:nth-child(1) {
+  color: rgba(0, 0, 0, 0.945);
 }
 
-.buttons:nth-child(2){
-    color: rgb(47, 0, 255);
+.buttons:nth-child(2) {
+  color: rgb(47, 0, 255);
 }
 
-.buttons:nth-child(3){
-    color: rgb(255, 0, 0);
+.buttons:nth-child(3) {
+  color: rgb(255, 0, 0);
 }
