--- a/src/app/components/modal-task-update/modal-task-update.component.html
+++ b/src/app/components/modal-task-update/modal-task-update.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title">Editar tarefa</h4>
+  <h2 class="modal-title">Editar tarefa</h2>
   <button type="button" class="close" aria-label="Close" (click)="close()">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -9,9 +9,8 @@
   <form [formGroup]="forms">
     <fieldset>
       <div class="form-group row m-b-15">
-        <label class="col-md-3 col-form-label" for="assignment">Tarefa:</label>
-        <div class="col-md-7">
-          <input type="text" class="form-control" id="assignment" placeholder="Digite a nova tarefa" formControlName="assignment">
+        <div class="col-md-8">
+          <input type="text" class="form-control offset-md-3" id="assignment" placeholder="Digite a nova tarefa" formControlName="assignment">
         </div>
       </div>
     </fieldset>
