--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   margin: 0.7rem 0.3rem;
-  padding: 1rem;
+  padding: 1.3rem;
   list-style: none;
 }
 
@@ -28,6 +28,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-right: -0.6rem;
 }
 
 .buttons {
