Criando componente task-save

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<header>
-  <h1>Lista de Tarefas</h1>
-  <app-task-add></app-task-add>
-</header>
+<app-home></app-home>
+<!-- 
+
 <main>
   <app-tasks></app-tasks>
-</main>
+</main> -->
