componentes do header funcional

--- a/src/app/components/task-save/tasks-save.component.html
+++ b/src/app/components/task-save/tasks-save.component.html
@@ -1,1 +1,2 @@
-<p>tasks-save works!</p>
+ <button class="buttons" name="sendBankData" id="sendBankData" (click)="sendData()"><i
+     class="fa fa-cloud-upload-alt"></i></button>
