--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,2 +1,10 @@
-<h1>Lista de Tarefas</h1>
-<app-task-create></app-task-create>
+<header>
+  <h1>Lista de Tarefas</h1>
+  <div class="content-header">
+    <app-task-create></app-task-create>
+    <app-tasks-save></app-tasks-save>
+  </div>
+</header>
+<main class="content-main">
+  <app-tasks-read></app-tasks-read>
+</main>
