--- a/src/app/components/task-create/task-create.component.css
+++ b/src/app/components/task-create/task-create.component.css
@@ -1,27 +1,19 @@
-.container{
-    display: flex;
-    justify-content: center;
+.task-field {
+  border-radius: 0.6rem;
+  outline: none;
+  padding: 0.6rem;
+  margin-right: 0.6rem;
+  border: none;
+  height: 2.7rem;
 }
 
-.form{
-    margin: 4rem auto 2.5rem;
-}
-
-.task-field{
-    height: 3rem;
-    border-radius: 0.8rem;
-    outline: none;
-    padding: 0.6rem;
-    margin-right: 0.8rem;
-    border: none;
-}
-
-.buttons{
-    height: 2.8rem;
-    width: 2.2rem;
-    margin-right: 0.4rem;
-    border-radius: 0.7rem;
-    outline: none;
-    border: none;
-    font-size: 1.2rem;
+.buttons {
+  height: 2.8rem;
+  width: 2.2rem;
+  margin-right: 0.4rem;
+  border-radius: 0.7rem;
+  outline: none;
+  border: none;
+  font-size: 1.2rem;
+  color: rgb(24, 150, 12);
 }
