--- a/src/app/view/home/home.component.css
+++ b/src/app/view/home/home.component.css
@@ -6,3 +6,10 @@ h1 {
   justify-content: center;
   font-size: 2rem;
 }
+
+.content-header{
+  margin: 3.5rem 0 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
