--- a/src/app/components/task-read/task-read.component.css
+++ b/src/app/components/task-read/task-read.component.css
@@ -1,18 +1,18 @@
 .container {
-  background-color: rgba(139, 17, 113, 0.397);
-  border-radius: 1rem;
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
+  margin: 0 auto;
 }
 
 .cards {
   background-color: white;
   width: 24%;
-  height: 4.8rem;
+  height: 5rem;
   border-radius: 0.8rem;
   display: flex;
   align-items: center;
-  margin: 0.7rem 0.3rem;
+  margin: 0.5rem 0.3rem;
   padding: 1.3rem;
   list-style: none;
 }
