--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -2,9 +2,9 @@
   <h1>Lista de Tarefas</h1>
   <div class="content-header">
     <app-task-create></app-task-create>
-    <app-tasks-save></app-tasks-save>
+    <app-task-save></app-task-save>
   </div>
 </header>
 <main class="content-main">
-  <app-tasks-read></app-tasks-read>
+  <app-task-read></app-task-read>
 </main>
