--- a/src/app/components/task-read/task-read.component.css
+++ b/src/app/components/task-read/task-read.component.css
@@ -1,14 +1,19 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  padding: 0;
+  padding: 1rem;
   margin: 0 auto;
+  background-color: rgba(139, 17, 113, 0.397);
+  max-width: 90%;
+  width: auto;
+  border-radius: 1rem;
 }
 
 .cards {
   background-color: white;
-  width: 24%;
-  height: 5rem;
+  max-width: 100%;
+  width: auto;
+  min-height: 5rem;
   border-radius: 0.8rem;
   display: flex;
   align-items: center;
@@ -18,27 +23,24 @@
 }
 
 .task {
-  width: 75%;
+  width: 80%;
   font-weight: 600;
-  margin-right: 1.8rem;
+  word-break: break-all;
 }
 
 .content-buttons {
-  width: 20%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-right: -0.6rem;
 }
 
 .buttons {
-  width: 1.6rem;
-  border-radius: 0.7rem;
+  width: 1.8rem;
   outline: none;
   border: none;
   font-size: 1.3rem;
   background: none;
-  margin-right: 0.2rem;
+  margin-right: 0.1rem;
 }
 
 .buttons:nth-child(1) {
