--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -5,6 +5,6 @@
     <app-task-save></app-task-save>
   </div>
 </header>
-<main class="content-main">
+<main>
   <app-task-read></app-task-read>
 </main>
