--- a/src/app/components/task-create/task-create.component.css
+++ b/src/app/components/task-create/task-create.component.css
@@ -17,3 +17,10 @@
   font-size: 1.2rem;
   color: rgb(24, 150, 12);
 }
+
+@media screen and (max-width: 300px) {
+  .task-field {
+    width: 65%;
+    margin-left: 1rem;
+  }
+}
